Deploy lzy service